unpackaged/main/default/objects/litify_pm__lit_LookupField_Settings__c/litify_pm__lit_LookupField_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Defines settings on the LookupField component</description>
    <label>LookupField Settings</label>
</CustomObject>