unpackaged/main/default/objects/litify_pm__lit_LookupField_Settings__c/fields/litify_pm__lit_Advanced_Search_Result_Limit__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__lit_Advanced_Search_Result_Limit__c</fullName>
    <inlineHelpText>The maximum number of results that can be returned by an Advanced Search</inlineHelpText>
    <label>Advanced Search Result Limit</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>