unpackaged/main/default/objects/litify_pm__lit_LookupField_Settings__c/fields/litify_pm__lit_Allow_User_Filter_Override__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__lit_Allow_User_Filter_Override__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Allows users to specify their own filters to override global or profile default filters. If FALSE on the global setting, all children filters will be ignored.</inlineHelpText>
    <label>Allow User Filter Override</label>
    <type>Checkbox</type>
</CustomField>