unpackaged/main/default/objects/litify_pm__lit_LookupField_Settings__c/fields/litify_pm__lit_Allow_User_Result_Limit_Override__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__lit_Allow_User_Result_Limit_Override__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Allows users to specify their own result limit to override global or profile default filters. If FALSE on the global setting, all children result limits will be ignored.</inlineHelpText>
    <label>Allow User Result Limit Override</label>
    <type>Checkbox</type>
</CustomField>