unpackaged/main/default/objects/litify_pm__lit_LookupField_Settings__c/fields/litify_pm__lit_Filter_Field_1_API_Name__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__lit_Filter_Field_1_API_Name__c</fullName>
    <inlineHelpText>Example: litify_pm__Matter__c.litify_pm__Billing_Type__c</inlineHelpText>
    <label>Filter Field 1 - API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>