unpackaged/main/default/objects/litify_pm__lit_LookupField_Settings__c/fields/litify_pm__lit_Filter_Field_1_Operator__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__lit_Filter_Field_1_Operator__c</fullName>
    <inlineHelpText>The filter operator. Options: =, !=, &gt;, &gt;=, &lt;, &lt;=, LIKE, NOT LIKE</inlineHelpText>
    <label>Filter Field 1 - Operator</label>
    <length>20</length>
    <type>Text</type>
</CustomField>