unpackaged/main/default/objects/litify_pm__lit_LookupField_Settings__c/fields/litify_pm__lit_Filter_Field_2_Value__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__lit_Filter_Field_2_Value__c</fullName>
    <inlineHelpText>Enter a value. Use BLANK for a blank value. Use SEARCHTERM to use the value entered by the user into the search.</inlineHelpText>
    <label>Filter Field 2 - Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>