unpackaged/main/default/objects/litify_pm__lit_LookupField_Settings__c/fields/litify_pm__lit_Use_Default_Filters_Defined_Here__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__lit_Use_Default_Filters_Defined_Here__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>If this is checked, default filters defined here will be used. Otherwise, they will be ignored and default filters defined higher in the hierarchy will be used.</inlineHelpText>
    <label>Use Default Filters Defined Here</label>
    <type>Checkbox</type>
</CustomField>